[package]
name = "morton-index"
version = "0.3.0"
edition = "2021"
description = "Types and functions for efficiently and easily work with Morton indices"
license-file = "LICENSE"
authors = ["Pascal Bormann <pascal.bormann@igd.fraunhofer.de>"]
keywords = ["morton-index", "morton", "space-filling-curve"]
readme = "README.md"

[dependencies]
nalgebra = {version = "0.31"}
thiserror = "1.0.30"
num-traits = "0.2.14"
bytemuck = "1.7.3"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3"

[[bench]]
name = "morton_index_3d_bench"
harness = false